style.css
/* Logo header with 3 links, it will scroll with user */
.header_background {/*applies to upper section as well */
	background-color: rgb(12, 12, 65);
	color: white;
	padding: 16px;
	margin: 0px;
}


.header {
	display: flex;
	justify-content: space-around;
	align-items: center;
	margin-bottom: 16px;
	/* border: 5px solid red;*/
}

.header ul {
	display: flex;
	justify-content: space-between;
	gap: 16px;
}

.header ul li a {
	text-decoration: none;
	color: white;
	list-style-type: none;
	font-size: 16px;
}

.header ul li {
	list-style-type: none;
	display: flex;
}

/* content with the sign up button and image */

.upper {
	display: flex;
	justify-content: center;
	align-items: center;
	/*border: 5px solid blue;*/
}

.intro {
	font-weight: bold;
	text-align: center;
	font-size: 56px;
	
}

.upper_content {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	max-width: 400px;
	gap: 4px;
}

.upper img {
	width: 500px;
	max-height: 350px;
	/*
	margin-right: 48px;*/
}

/* content and links for the recipes that will be card shaped */
.box_content {
	display: flex;
	justify-content: space-around;
	margin: 32px;
	/* border: 5px solid green;*/
}
 
.box_content ul {
	display: flex;
	justify-content: space-between;
	margin: 8px;
	padding: 32px;
	gap: 8px;
}

.box_content ul li {
	list-style-type: none;
	display: flex;
	flex-direction: column;
	align-items: center;
	text-align: center;
	border: 5px solid #eee;
	box-shadow: 2px 4px 16px rgba(0,0,0,.06);
	border-radius: 5px;
}


/* Quote content from users of this site */
.quote_container {
	background-color: rgb(180, 180, 180);
	padding: 16px;
}

.quote {
	
	display: flex;
	justify-content: center;
	text-align: left;
	align-items: flex-start;
	flex-direction: column;
	width: max-content;
	margin: auto;
	padding-top: 8px;
	gap: 4px;
}

.quote p {
	text-align: right;
	margin-left: 200px;
	margin-bottom: 8px;
}

/* Footer section */
.footer {
	display: flex;
	justify-content: center;
	align-items: center;
	margin: 48px;
	/*border: 5px solid blue;*/
}

.footer_box {
	display: flex;
	justify-content: center;
	background-color:  rgb(47, 104, 190);
	width: 1200px;
	max-height: 500px;
	border-radius: 5px;
	padding: 16px;
	gap: 84px;
}

.footer_content {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	max-width: 400px;
	gap: 4px;
	color: white;
	/*border: 5px solid blue;*/
}

/* Pizza, Sliders, Chilimac Section */
.ingredients_content, .cooking_content, .assembly_content {
	display: flex;
	flex-direction: column;
	margin: 32px 32px 32px 48px;
}

.ingredients, .cooking, .assembly {
	display: flex;
	align-items: center;
}

.ingredients img, .cooking img, .assembly img {
	width: 500px;
	max-height: 450px;
	margin-left: 32px;
	border-radius: 5px;
}

/*.baking img {
	width: 500px;
	max-height: 450px;
	
	border-radius: 5px;
}*/


/*general formating for commonly used tags */

ul li {
	font-size: 24px;
	font-family: Verdana, "Times New Roman", sans-serif;
	list-style-type: none;
}

ul li img{
	width: 200px;
	height: 200px;
}

 li {
	font-size: 24px;
	font-family: Verdana, "Times New Roman", sans-serif;
	
}

li.recipe:hover{
	font-size: 48px;
	font-family: Arial;
	background-color: RGB(200,200,200);
}

h3, p {
	margin: 0px;
}

button {
	background-color: rgb(47, 104, 190);
	color: white;
	border-radius: 5px;
	border: 1px solid white;
}

button a {
	color: white;
}

a {
	text-decoration: none;
}

